--- a/ConsoleSolution/CodeIQ1597/CodeIQ1597.csproj
+++ b/ConsoleSolution/CodeIQ1597/CodeIQ1597.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleSolution\ConsoleSolution.csproj">
+      <Project>{bc6cd1a8-062b-42fd-aec4-0449a2380738}</Project>
+      <Name>ConsoleSolution</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
