--- a/ConsoleSolution/CodeIQ1629/CodeIQ1629.csproj
+++ b/ConsoleSolution/CodeIQ1629/CodeIQ1629.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BC6CD1A8-062B-42FD-AEC4-0449A2380738}</ProjectGuid>
+    <ProjectGuid>{B3308A3C-B9E7-4F36-9EA9-0CF32FB7253C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleSolution</RootNamespace>
-    <AssemblyName>ConsoleSolution</AssemblyName>
+    <RootNamespace>CodeIQ1629</RootNamespace>
+    <AssemblyName>CodeIQ1629</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumericCalc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wideuse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
